// Test script for protobuf field mapping fix
// Run this in browser console to verify the field mapping

console.log('🔧 Testing Protobuf Field Mapping Fix...\n');

// Simulate the actual Headscale response structure
function simulateHeadscaleResponse() {
    console.log('📊 Actual Headscale Response Structure:');
    
    const actualResponse = {
        users: [
            {
                1: 1,  // id (uint64) - field 1
                name: "fangzhou93",  // field 2
                created_at: {  // field 3
                    seconds: 1745310438,
                    nanos: 802455714
                },
                // display_name not present for this user
            },
            {
                1: 2,  // id (uint64) - field 1
                name: "fangzhou94",  // field 2
                created_at: {  // field 3
                    seconds: 1745374074,
                    nanos: 251075720
                },
                // display_name not present for this user
            },
            {
                1: 3,  // id (uint64) - field 1
                name: "fz96",  // field 2
                created_at: {  // field 3
                    seconds: 1745563657,
                    nanos: 258511518
                },
                display_name: "ding",  // field 4
            }
        ]
    };
    
    console.log('Users found:', actualResponse.users.length);
    actualResponse.users.forEach((user, index) => {
        console.log(`User ${index + 1}:`);
        console.log(`  ID: ${user[1]} (field 1, uint64)`);
        console.log(`  Name: "${user.name}" (field 2, string)`);
        console.log(`  Created: ${new Date(user.created_at.seconds * 1000).toISOString()}`);
        if (user.display_name) {
            console.log(`  Display Name: "${user.display_name}" (field 4, string)`);
        }
        console.log('');
    });
    
    return actualResponse;
}

// Test protobuf field encoding
function testProtobufFieldEncoding() {
    console.log('🔍 Testing Protobuf Field Encoding:');
    
    const fieldMappings = [
        { field: 1, wireType: 0, name: 'id (uint64)', encoding: 'varint' },
        { field: 2, wireType: 2, name: 'name (string)', encoding: 'length-delimited' },
        { field: 3, wireType: 2, name: 'created_at (Timestamp)', encoding: 'length-delimited' },
        { field: 4, wireType: 2, name: 'display_name (string)', encoding: 'length-delimited' }
    ];
    
    fieldMappings.forEach(mapping => {
        const fieldTag = (mapping.field << 3) | mapping.wireType;
        console.log(`Field ${mapping.field}: ${mapping.name}`);
        console.log(`  Wire Type: ${mapping.wireType} (${mapping.encoding})`);
        console.log(`  Field Tag: 0x${fieldTag.toString(16).padStart(2, '0')} (${fieldTag})`);
        console.log('');
    });
}

// Test the old vs new protobuf definition
function compareProtobufDefinitions() {
    console.log('📋 Comparing Protobuf Definitions:');
    
    console.log('❌ Old Definition (incorrect):');
    console.log('  message User {');
    console.log('    string id = 1;                    // Wrong: should be uint64');
    console.log('    string name = 2;                  // Correct');
    console.log('    google.protobuf.Timestamp created_at = 3;  // Correct');
    console.log('    string display_name = 4;          // Correct');
    console.log('  }');
    console.log('');
    
    console.log('✅ New Definition (correct):');
    console.log('  message User {');
    console.log('    uint64 id = 1;                    // Fixed: now uint64');
    console.log('    string name = 2;                  // Correct');
    console.log('    google.protobuf.Timestamp created_at = 3;  // Correct');
    console.log('    string display_name = 4;          // Correct');
    console.log('  }');
    console.log('');
}

// Test data conversion
function testDataConversion() {
    console.log('🔄 Testing Data Conversion:');
    
    const protobufUser = {
        id: 1,  // uint64 from protobuf
        name: "fangzhou93",
        created_at: {
            seconds: 1745310438,
            nanos: 802455714
        },
        display_name: undefined  // optional field
    };
    
    console.log('Protobuf User:', protobufUser);
    
    // Convert to our internal User type
    const convertedUser = {
        id: protobufUser.id.toString(),  // Convert uint64 to string
        name: protobufUser.name,
        createdAt: new Date(protobufUser.created_at.seconds * 1000).toISOString(),
        displayName: protobufUser.display_name || protobufUser.name,  // fallback to name
        email: '',
        providerId: '',
        provider: 'grpc',
        profilePicUrl: ''
    };
    
    console.log('Converted User:', convertedUser);
    console.log('');
}

// Test error scenarios
function testErrorScenarios() {
    console.log('🚨 Testing Error Scenarios:');
    
    const errorScenarios = [
        {
            name: 'Field type mismatch',
            description: 'When protobuf expects uint64 but gets string',
            solution: 'Use correct field type in proto definition'
        },
        {
            name: 'Index out of range',
            description: 'When trying to read beyond buffer bounds',
            solution: 'Proper boundary checking and data validation'
        },
        {
            name: 'Invalid wire type',
            description: 'When encountering wire type 7 (invalid)',
            solution: 'Detect and truncate at invalid wire types'
        },
        {
            name: 'Character encoding',
            description: 'When user names contain non-ASCII characters',
            solution: 'Use UTF-8 non-fatal decoding'
        }
    ];
    
    errorScenarios.forEach((scenario, index) => {
        console.log(`${index + 1}. ${scenario.name}:`);
        console.log(`   Problem: ${scenario.description}`);
        console.log(`   Solution: ${scenario.solution}`);
        console.log('');
    });
}

// Test expected results
function testExpectedResults() {
    console.log('🎯 Expected Test Results:');
    
    console.log('After the protobuf field mapping fix:');
    console.log('✅ No more "index out of range" errors');
    console.log('✅ Correct parsing of uint64 ID fields');
    console.log('✅ Proper handling of optional fields');
    console.log('✅ Successful user data extraction');
    console.log('✅ Clean display of user information');
    console.log('');
    
    console.log('Expected gRPC Debug output:');
    console.log('  基础连接测试: ✅ 成功');
    console.log('  gRPC 连接测试: ✅ 成功 - 找到 3 个用户');
    console.log('  用户列表:');
    console.log('    - fangzhou93 (ID: 1)');
    console.log('    - fangzhou94 (ID: 2)');
    console.log('    - fz96 (ID: 3, Display: ding)');
    console.log('');
}

// Main test runner
function runProtobufFieldMappingTests() {
    console.log('🚀 Starting Protobuf Field Mapping Tests...\n');
    
    simulateHeadscaleResponse();
    testProtobufFieldEncoding();
    compareProtobufDefinitions();
    testDataConversion();
    testErrorScenarios();
    testExpectedResults();
    
    console.log('✅ Protobuf Field Mapping Tests Complete!');
    console.log('\n💡 Key Changes Made:');
    console.log('1. Changed User.id from string to uint64 in proto files');
    console.log('2. Updated data conversion to handle uint64 → string conversion');
    console.log('3. Enhanced error handling for field type mismatches');
    console.log('4. Improved boundary checking for protobuf parsing');
    console.log('\n🎯 Next: Test the actual gRPC connection with the fixed proto definition');
}

// Auto-run tests
runProtobufFieldMappingTests();
